zeit.content.article changes
============================

editor-ng branch (unreleased)
-----------------------------

- RAW-Block uses HTML parser and converts given HTML to XML now (#12267).

- Accomodated article to cope for the changed videos: videos are now full CMS
  objects and moved to zeit.content.video (for #8996)

- Articles are created without an addform now. A temporary file is created in
  DAV and automatically checked out. Upon checkin the temporary file is updated
  and renamed to the name given during editing the checked out article (#8080).

- Enable UI for author references (#7441, #7333).
- New Image layout and selectable layout for main_image(#12029)


2.9.6 (unreleased)
------------------

- Cleaned up dependencies on zope.app packages.


2.9.5 (2012-03-06)
------------------

- Update to new ConversionStep API. (#10251)


2.9.4 (2011-12-01)
------------------

- Update to use etree instead of objectify for HTML conversion/wysiwyg
  (via #10027).


2.9.3 (2011-11-24)
------------------

- Fix ordering issue with images: let the PageBreakStep before the
  XMLImageStructureStep because XMLImageStructureStep does not expect an extra
  level of tags (that is it gets confused by `<division><p><image>`).


2.9.2 (2011-06-20)
------------------

- Fix the usage of the product id (for #9033)

- Remove <p>, <intertitle> etc. from the module library (#9923).

- Removed 'preview' and 'live' links from the workflow form (#10660).

- Updated styling of items in the ObjectSequenceWidget (#10666).


2.9.1 (2010-08-09)
------------------

- Fix tests after product config changes in zeit.cms (#7549).


2.9.0 (2010-06-09)
------------------

- Hide new author_references field.


2.8.3 (2010-06-02)
------------------

- Extract all text content from the body (#7359).


2.8.2 (2010-04-13)
------------------

- Using versions from the ZTK.

- Rezensionsinformationen lassen sich wieder(?) bearbeiten (#7075)


2.8.1 (2010-03-10)
------------------
